Redis Swagger and tests