@@ -1,6 +1,7 @@
 package com.personal.project.controller;
 
 import com.personal.project.dto.VendorDTO;
+import com.personal.project.mapper.VendorMapper;
 import com.personal.project.repository.VendorRepository;
 import com.personal.project.service.GoldPriceService;
 import lombok.RequiredArgsConstructor;
@@ -12,11 +13,15 @@ import com.personal.project.dto.TransactionDTO;
 import com.personal.project.dto.AddGoldRequest;
 import com.personal.project.service.VendorDashboardService;
 import jakarta.validation.Valid;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.springframework.cache.annotation.Cacheable;
+
+import static com.personal.project.config.RedisCacheConfig.VENDORS_CACHE;
 
 @RestController
 @RequestMapping("/vendors")
@@ -25,16 +30,19 @@ public class VendorController {
 
     private final VendorRepository vendorRepository;
     private final GoldPriceService goldPriceService;
+    private final VendorMapper vendorMapper;
 
     @GetMapping
+    @Cacheable(cacheNames = VENDORS_CACHE, key = "'all'")
     public List<VendorDTO> getVendors() {
-        return vendorRepository.findAll().stream().map(v -> {
-            VendorDTO dto = new VendorDTO();
-            dto.setVendorId(v.getVendorId());
-            dto.setVendorName(v.getVendorName());
-            dto.setCurrentGoldPrice(v.getCurrentGoldPrice() != null ? v.getCurrentGoldPrice() : goldPriceService.getCurrentPrice().getPrice());
-            return dto;
-        }).collect(Collectors.toList());
+        return vendorRepository.findAll().stream()
+                .map(vendor -> vendorMapper.toDto(
+                        vendor,
+                        vendor.getCurrentGoldPrice() != null
+                                ? vendor.getCurrentGoldPrice()
+                                : goldPriceService.getCurrentPrice().getPrice()
+                ))
+                .toList();
     }
 
     private final VendorDashboardService vendorDashboardService;
@@ -45,7 +53,7 @@ public class VendorController {
     }
 
     @PutMapping("/{id}/profile")
-    public ResponseEntity<VendorDashboardDTO> updateProfile(@PathVariable("id") Integer id, @RequestBody EditVendorProfileRequest request) {
+    public ResponseEntity<VendorDashboardDTO> updateProfile(@PathVariable("id") Integer id, @Valid @RequestBody EditVendorProfileRequest request) {
         return ResponseEntity.ok(vendorDashboardService.updateProfile(id, request));
     }
 
@@ -56,13 +64,13 @@ public class VendorController {
 
     @PostMapping("/{id}/branches")
     public ResponseEntity<VendorBranchDTO> addBranch(@PathVariable("id") Integer id, @Valid @RequestBody AddBranchRequest request) {
-        return ResponseEntity.ok(vendorDashboardService.addBranch(id, request));
+        return ResponseEntity.status(HttpStatus.CREATED).body(vendorDashboardService.addBranch(id, request));
     }
 
     @DeleteMapping("/{id}/branches/{branchId}")
     public ResponseEntity<Void> deleteBranch(@PathVariable("id") Integer id, @PathVariable("branchId") Integer branchId) {
         vendorDashboardService.deleteBranch(id, branchId);
-        return ResponseEntity.ok().build();
+        return ResponseEntity.noContent().build();
     }
 
     @GetMapping("/{id}/transactions")
